<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_random_level"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/settings_msg" />

    <Button
        android:id="@+id/button_random_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_custom_levels"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/level_editor_msg" />

    <Button
        android:id="@+id/button_play_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_custom_levels"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:text="@string/level_select_msg" />

    <Button
        android:id="@+id/button_custom_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_random_level"
        android:layout_below="@+id/button_play_level"
        android:layout_marginTop="28dp"
        android:text="@string/highscores_msg" />

</RelativeLayout>