<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/button_random_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_custom_levels"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onRandomLevelButtonClicked"
        android:text="@string/random_level_msg"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_play_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onPlayLevelButtonClicked"
        android:text="@string/play_level_msg"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_custom_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_play_level"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onCustomLevelsButtonClicked"
        android:text="@string/imported_level_msg"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/spinner_standard_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_play_level"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:textColor="@android:color/white" />

</RelativeLayout>